# CoCoMiro

./: .clinerules  .copilot-instructions.md  .gitignore  Cargo.toml  MIGRATION_TASKS.md  PRODUCT_SPECIFICATION.md  README.md  code-review-backlog.md  index.html  paste-newline-fix-tasks.md  run-frontend.sh  sticky-note.md  styles.css  tasks-backlog.md  test-all.sh  text-workflow-analysis.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/skills/rust-best-practices/: SKILL.md
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/src/: main.rs
docs/: ARCHITECTURE_DECISION_RECORD.md  AUTHENTICATION_IMPLEMENTATION.md  PRODUCT_SPECIFICATION.md
frontend/: Cargo.toml  Trunk.toml  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: canvas.spec.ts  sticky-notes.spec.ts
frontend/e2e/sticky-notes/: task-1-3.spec.ts  task-4-1.spec.ts
frontend/playwright-report/: index.html
frontend/src/: api.rs  components_test.rs  constants.rs  error.rs  events.rs  lib.rs  performance.rs  rendering.rs  state.rs
frontend/src/components/: app.rs  canvas.rs  mod.rs  sticky_note.rs  toolbar.rs
frontend/src/styles/: canvas.rs  mod.rs  sticky_note.rs  toolbar.rs
frontend/tests/: canvas-load.spec.ts  keyboard-zoom.spec.ts  mouse-drag-pan.spec.ts  page-objects.ts  test-setup.ts  zoom-buttons.spec.ts
shared/: Cargo.toml
shared/src/: lib.rs
specs/: infinite-canvas-spec.md  sticky-notes-spec.md  todo.md  workspace-specs.md
src/: app.rs  auth.js  auth.rs  canvas.rs  error.rs  event_constants.rs  event_setup.rs  events.rs  keyboard_events.rs  lib.rs  logging.rs  mouse_events.rs  sticky_notes.rs  styling.rs  text_input.rs  toolbar.rs  viewport.rs
src/sticky_notes/: mod.rs  note.rs  state.rs  types.rs
tests/: e2e_basic.rs  e2e_home.rs  e2e_sticky_notes.rs  integration_tests.rs  visual_regression.rs
tests/common/: mod.rs
