[package]
name = "cocomiro"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "CanvasRenderingContext2d",
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "Element",
    "EventTarget",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "KeyboardEvent",
    "MouseEvent",
    "Node",
    "Performance",
    "TextMetrics",
    "WheelEvent",
    "Window",
    "console",
] }

[dev-dependencies]
headless_chrome = "1.0"
