[package]
name = "cocomiro-frontend"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.87"
yew = { version = "0.21", features = ["csr", "ssr"] }
web-sys = { version = "0.3", features = [
  "console", "Window", "Document", "Element", "HtmlElement", "Node", "Text",
  "Request", "RequestInit", "RequestMode", "Response", "Headers",
  "HtmlCanvasElement", "CanvasRenderingContext2d", "EventTarget", "MouseEvent",
  "WheelEvent", "KeyboardEvent", "Event", "UiEvent", "FocusEvent"
] }
js-sys = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
anyhow = "1.0"
thiserror = "1.0"
wasm-bindgen-futures = "0.4"
cocomiro-shared = { path = "../shared" }  # Shared types
wasm-logger = "0.2"
log = "0.4"
stylist = { version = "0.13", features = ["yew_integration"] }
console_error_panic_hook = "0.1"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin)'] }
dead_code = "allow"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false